# retro-arcade

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COMPILATION  LICENSE  README.md
data/: objecttypes.xml
data/characters/pickup/: apple.kra  apple.tsx
data/characters/snake/: snake.tsx  snake_body.kra  snake_body.kra~  snake_head.kra  snake_head.png~  snake_tail.kra  snake_tail.png~
data/interface/: Buttons.tsx
data/scenes/: menu.tmx  snake-arena1.tmx
data/tilesets/snake-arena/: arena.tsx  dirt-block.kra  stone-block.kra
scripts/: build.sh  clean_up.sh  compile.sh  fetch_dev_dependencies.sh  fetch_emscripten.sh  fetch_emscripten_deps.sh  pack_artifacts.sh
src/character_components/: can_walk.cpp  can_walk.hpp  has_shadow.cpp  has_shadow.hpp  template.cpp  template.hpp
src/characters/: button.cpp  button.hpp  generate_new_character.py  snake.cpp  snake.hpp  template.cpp  template.hpp
src/core/: game_character.cpp  game_character.hpp  game_scene.cpp  game_scene.hpp  main.cpp  scene_manager.cpp  scene_manager.hpp
src/scenes/: menu.cpp  menu.hpp  snake_arena.cpp  snake_arena.hpp  template.cpp  template.hpp
util/: shell_debug.html  shell_release.html
